<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mobilne Vezbe</string>
    
    <!-- VEZBA 3 - String resursi za sve tekstove -->
    
    <!-- SplashScreen -->
    <string name="splash_welcome">Dobrodo\u0161li!</string>
    <string name="splash_subtitle">Aplikacija za demonstraciju</string>
    
    <!-- LoginScreen -->
    <string name="login_title">Prijava</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Lozinka</string>
    <string name="login_button">Prijavi se</string>
    <string name="register_button">Registruj se</string>
    <string name="login_empty_fields">Molimo popunite sva polja</string>
    
    <!-- RegisterScreen - VEZBA 3: Dodati polja za telefon -->
    <string name="register_title">Registracija</string>
    <string name="register_name_hint">Ime i prezime</string>
    <string name="register_email_hint">Email</string>
    <string name="register_phone_hint">Broj telefona</string>
    <string name="register_password_hint">Lozinka</string>
    <string name="register_confirm_password_hint">Potvrdi lozinku</string>
    <string name="register_button_text">Registruj se</string>
    <string name="register_empty_fields">Molimo popunite sva polja</string>
    <string name="register_password_mismatch">Lozinke se ne poklapaju</string>
    
    <!-- HomeScreen - VEZBA 3: ConstraintLayout raspored -->
    <string name="home_welcome">Dobrodo\u0161li na po\u010detnu stranicu!</string>
    <string name="home_profile_info">Informacije o profilu</string>
    <string name="home_email_label">Email:</string>
    <string name="home_phone_label">Telefon:</string>
    <string name="home_logout_button">Odjavi se</string>
    <string name="home_settings_button">Pode\u0161avanja</string>
    
    <!-- Op\u0161te poruke -->
    <string name="error_empty_field">Ovo polje je obavezno</string>
    <string name="success_registration">Uspe\u0161na registracija!</string>
    <string name="success_login">Uspe\u0161na prijava!</string>
    
    <!-- VEZBA 4 - UserScreen i navigacija -->
    <string name="user_screen_title">Korisnici</string>
    <string name="sort_users">Sortiraj korisnike:</string>
    <string name="filter_users">Filtriraj korisnike:</string>
    <string name="filter_hint">Unesite tekst za filtriranje</string>
    <string name="filter_button">Filtriraj</string>
    <string name="clear_filter">Ukloni filter</string>
    <string name="total_users">Ukupno korisnika: %d</string>
    <string name="users_found">Pronađeno %d korisnika</string>
    <string name="filter_removed">Filter uklonjen</string>
    <string name="list_refreshed">Lista osvežena</string>
    <string name="all_users_deleted">Svi korisnici obrisani</string>
    <string name="enter_filter_text">Unesite tekst za filtriranje</string>
    
    <!-- VEZBA 4 - Sort opcije -->
    <string name="sort_none">Bez sortiranja</string>
    <string name="sort_name">Po imenu</string>
    <string name="sort_email">Po email-u</string>
    <string name="sort_date">Po datumu registracije</string>
    
    <!-- VEZBA 4 - Login provere -->
    <string name="login_failed">Pogrešan email ili lozinka</string>
    <string name="email_exists">Email adresa već postoji</string>
    <string name="registration_successful">Registracija uspešna!</string>
    
    <!-- VEZBA 5 - Notifikacije i servisi -->
    <string name="notification_channel_user_registration">Registracija korisnika</string>
    <string name="notification_channel_user_registration_desc">Notifikacije o novim registrovanim korisnicima</string>
    <string name="notification_channel_internet_status">Internet konekcija</string>
    <string name="notification_channel_internet_status_desc">Obaveštenja o statusu internet konekcije</string>
    
    <string name="notification_user_registered_title">Novi korisnik registrovan!</string>
    <string name="notification_user_registered_text">Korisnik %s se uspešno registrovao</string>
    <string name="notification_user_registered_big_text">Novi korisnik %s se upravo registrovao u aplikaciji. Kliknite da vidite detalje.</string>
    
    <string name="notification_internet_offline_title">Nema internet konekcije</string>
    <string name="notification_internet_offline_text">Proverite internet konekciju i pokušajte ponovo</string>
    <string name="notification_internet_offline_big_text">Aplikacija nije povezana na internet. Kliknite da otvorite podešavanja i uključite Wi-Fi ili mobilne podatke.</string>
    
    <string name="notification_action_show">Prikaži</string>
    <string name="notification_action_settings">Podešavanja</string>
    
    <string name="service_internet_check_started">Servis za proveru interneta pokrenut</string>
    <string name="service_internet_check_stopped">Servis za proveru interneta zaustavljen</string>
    <string name="receiver_internet_status_registered">InternetStatusReceiver registrovan</string>
    <string name="receiver_internet_status_unregistered">InternetStatusReceiver unregistrovan</string>
    
    <!-- VEZBA 4 - Navigation -->
    <string name="nav_home">Početna</string>
    <string name="nav_users">Korisnici</string>
    <string name="nav_login">Prijava</string>
    <string name="nav_register">Registracija</string>
    <string name="nav_logout">Odjava</string>

    <!-- VEZBA 6 - SharedPreferences, baza podataka, uloge, ContentProvider -->
    <string name="register_uloga_label">Uloga u sistemu:</string>
    <string name="settings_title">Podešavanja sinhronizacije</string>
    <string name="sync_never">Nikad</string>
    <string name="sync_1_min">Na svakih 1 min</string>
    <string name="sync_15_min">Na svakih 15 min</string>
    <string name="sync_30_min">Na svakih 30 min</string>
    <string name="settings_saved">Podešavanja sačuvana</string>
    <string name="contacts_title">Kontakti (ContentProvider)</string>
    <string name="driver_screen_title">Ekran Vozača</string>
    <string name="passenger_screen_title">Ekran Putnika</string>
    <string name="logout_success">Uspešno odjavljen</string>
</resources>
